--- a/src/plugins/orangehrmCorePlugin/templates/base.html.twig
+++ b/src/plugins/orangehrmCorePlugin/templates/base.html.twig
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>{% block title %}OrangeHRM{% endblock %}</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="no-text.png">
+  <title>{% block title %}Blue Eagles HRM{% endblock %}</title>
   {% block links %}{% endblock %}
   {% block stylesheets %}{% endblock %}
 </head>
