--- a/src/plugins/orangehrmCorePlugin/templates/copyright.html.twig
+++ b/src/plugins/orangehrmCorePlugin/templates/copyright.html.twig
@@ -1,2 +1,2 @@
-<oxd-text tag="p" class="orangehrm-copyright">{{ productName }} {{ productVersion }}</oxd-text>
-<oxd-text tag="p" class="orangehrm-copyright">&copy; 2005 - {{ copyrightYear}} <a href="http://www.orangehrm.com" target="_blank">OrangeHRM, Inc</a>. All rights reserved.</oxd-text>
+<oxd-text tag="p" class="orangehrm-copyright">Blue Eagles HRM {{ productVersion }}</oxd-text>
+<oxd-text tag="p" class="orangehrm-copyright">&copy; {{ copyrightYear}} <a href="#" target="_blank">Blue Eagles HRM</a>. All rights reserved.</oxd-text>
